--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ requires = [
 [tool.ruff]
 line-length = 120
 # Enable Pyflakes `E` and `F` codes by default.
-select = [
+lint.select = [
     "E", "W",  # see: https://pypi.org/project/pycodestyle
     "F",  # see: https://pypi.org/project/pyflakes
 ]
-ignore = [
+lint.ignore = [
     "E731", # Do not assign a lambda expression, use a def
 ]
 # Exclude a variety of commonly ignored directories.
@@ -23,17 +23,17 @@ exclude = [
     "build",
     "temp",
 ]
-ignore-init-module-imports = true
+lint.ignore-init-module-imports = true
 output-format = "pylint"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "src/fts_examples/ipynb_src/fts_superglue_nb.py" = ["E501","F401","F821"]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["docs","fts_examples","finetuning_scheduler","tests"]
 force-sort-within-sections = false
 order-by-type = false
