--- a/src/fts_examples/model_parallel/config/fts_fsdp_profiling.yaml
+++ b/src/fts_examples/model_parallel/config/fts_fsdp_profiling.yaml
@@ -8,7 +8,7 @@ trainer:
       strategy_adapter_cfg:
         fsdp_default_kwargs:
           act_ckpt: ['composable']
-          cpu_offload_policy: {}
+          # cpu_offload_policy: {}
         fsdp_plan: {'model.output': {}, 'model.layers.\d*$': {}, 'model': {}}
   strategy:
     init_args:
