--- a/dockers/fts-az-base/Dockerfile
+++ b/dockers/fts-az-base/Dockerfile
@@ -19,6 +19,9 @@ FROM speediedan/finetuning-scheduler:base-${CUST_BASE}py${PYTHON_VERSION}-pt${PY
 
 LABEL maintainer="Dan Dale <https://github.com/speediedan>"
 
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends sudo \
+ && rm -rf /var/lib/apt/lists/*
 RUN useradd -c 'azpl_init user' -d /home/azpl_init -m -k /etc/skel -s /bin/bash -ou 0 -g 0 azpl_init
 
 COPY dockers/fts-az-base/.bashrc /home/azpl_init/.bashrc
