--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -20,6 +20,7 @@ ARG PYTHON_VERSION=3.12
 ARG PYTORCH_VERSION=2.10.0
 ARG CUST_BUILD=0
 ARG MKL_THREADING_LAYER=GNU
+ARG UV_VERSION=0.7.0
 
 SHELL ["/bin/bash", "-c"]
 # https://techoverflow.net/2019/05/18/how-to-fix-configuring-tzdata-interactive-input-when-building-docker-images/
@@ -60,49 +61,46 @@ RUN apt-get update -qq --fix-missing  && \
     rm -rf /root/.cache && \
     rm -rf /var/lib/apt/lists/*
 
+# Install uv for fast Python package management
+RUN curl -LsSf https://astral.sh/uv/${UV_VERSION}/install.sh | sh && \
+    echo 'source $HOME/.local/bin/env' >> ~/.bashrc
+
 COPY ./requirements.txt requirements.txt
 COPY ./requirements/ ./requirements/
 
 ENV PYTHONPATH=/usr/lib/python${PYTHON_VERSION}/site-packages
 ENV USE_CI_COMMIT_PIN="1"
+ENV PATH="/root/.local/bin:$PATH"
 
 RUN \
-    wget https://bootstrap.pypa.io/get-pip.py --progress=bar:force:noscroll --no-check-certificate | python${PYTHON_VERSION} && \
-    python${PYTHON_VERSION} get-pip.py && \
-    rm get-pip.py && \
-    python${PYTHON_VERSION} -m pip install --upgrade pip setuptools && \
-    # Disable cache
-    pip config set global.cache-dir false && \
-    pip install virtualenv && \
-    mkdir /tmp/venvs && \
-    python -m virtualenv -p python${PYTHON_VERSION} /tmp/venvs/fts_dev && \
+    # Create venv with uv
+    uv venv --python python${PYTHON_VERSION} /tmp/venvs/fts_dev && \
     . /tmp/venvs/fts_dev/bin/activate && \
     # set particular PyTorch version by default
     if [[ "${CUST_BUILD}" -eq 0 ]]; then \
         CUDA_VERSION_MM=${CUDA_VERSION%.*}; \
-        pip install torch --no-cache-dir \
+        uv pip install torch --prerelease=allow \
         --find-links="https://download.pytorch.org/whl/cu${CUDA_VERSION_MM//'.'/''}/torch_stable.html" \
         --find-links="https://download.pytorch.org/whl/test/cu${CUDA_VERSION_MM//'.'/''}/torch" \
         --find-links="https://download.pytorch.org/whl/test/cu${CUDA_VERSION_MM//'.'/''}/pytorch-triton"; \
     else \
         # or target a specific cuda build, by specifying a particular index url w/...
         # ... default channel
-        # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128; \
+        # uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128; \
         # ... pytorch patch version
-        # pip install torch==1.11.1+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
+        # uv pip install torch==1.11.1+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
         # ... pytorch nightly dev version
-        pip install --pre torch==2.10.0.dev20251017 --index-url https://download.pytorch.org/whl/nightly/cu128; \
+        uv pip install --prerelease=allow torch==2.10.0.dev20251124 --index-url https://download.pytorch.org/whl/nightly/cu128; \
         # ... test channel
-        # pip install --pre torch==2.10.0 --index-url https://download.pytorch.org/whl/test/cu128; \
+        # uv pip install --prerelease=allow torch==2.10.0 --index-url https://download.pytorch.org/whl/test/cu128; \
     fi && \
     # We avoid installing Lightning and other dependencies here as they are usually upgraded anyway later in
     # CI but we may re-enable in the future.
-    # LIGHTNING_COMMIT=$(cat ./requirements/lightning_pin.txt) && \
-    # pip install "lightning @ git+https://github.com/Lightning-AI/lightning.git@${LIGHTNING_COMMIT}#egg=lightning" --no-cache-dir && \
+    # Lightning commit can be installed using: uv pip install -e ".[all]" --override requirements/ci/overrides.txt
     # Install all requirements
-    # pip install -r requirements/devel.txt --no-cache-dir && \
+    # uv pip install -r requirements/devel.txt && \
     # Update six
-    pip install -U six --no-cache-dir && \
+    uv pip install -U six && \
     chmod -R 777 /tmp/venvs/fts_dev && \
     rm -rf requirements.* requirements/
 
@@ -116,14 +114,22 @@ RUN \
     py_ver=$(python -c "print(int('$PYTHON_VERSION'.split('.') >= '3.12'.split('.')))") && \
     echo "Python version check result: ${py_ver}"
 
+# Separate RUN to verify permissions persist across Docker layers
+RUN \
+    echo "=== Post-ENV permission check ===" && \
+    ls -ld /tmp/venvs/fts_dev && \
+    echo "Checking torch __pycache__ permissions:" && \
+    find /tmp/venvs/fts_dev -type d -path "*/torch/__pycache__" | head -3 | xargs ls -ld || echo "No torch __pycache__ found" && \
+    echo "=== Post-ENV check complete ==="
+
 RUN \
     set -x && \
     echo "============= Environment Information =============" && \
     . /tmp/venvs/fts_dev/bin/activate && \
-    echo "Pip version:" && \
-    pip --version && \
+    echo "uv version:" && \
+    uv --version && \
     echo "Installed packages:" && \
-    pip list && \
+    uv pip list && \
     echo "Verifying Python version:" && \
     python -c "import sys; ver = sys.version_info; print(f'Python {ver.major}.{ver.minor} detected'); assert f'{ver.major}.{ver.minor}' == '$PYTHON_VERSION', ver" && \
     echo "Verifying PyTorch version:" && \
