refactor: simplify UV-based CI infrastructure
Simplify the CI dependency management by:

- Filter torch directly in requirements.txt during lock generation when
  nightly is configured, eliminating the need for requirements_no_torch.txt
- All installation paths now use requirements.txt directly
- Replace USE_CI_COMMIT_PIN env var with UV_OVERRIDE pointing to
  requirements/ci/overrides.txt for Lightning commit pinning
- Add torch-nightly.txt as centralized config for nightly torch version
- Move optional dependencies to pyproject.toml (cli, extra, examples, ipynb)
- Add dependency-groups for dev and test in pyproject.toml
- Update minimum Python to 3.10 (drop 3.9)
- Add requirements-oldest.txt lock file for Python 3.10 oldest deps

The torch nightly workflow is now:
1. Edit torch-nightly.txt with version (or leave empty to disable)
2. Run lock_ci_requirements.sh to regenerate locks with torch filtered
3. CI pre-installs torch nightly from PyTorch index, then installs rest

This eliminates the complexity of runtime filtering and multiple
requirements files while maintaining flexibility for nightly testing.

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -72,24 +72,22 @@ jobs:
         set -e  # Exit on any error
         source /tmp/venvs/fts_dev/bin/activate
 
-        echo "=== Installing finetuning-scheduler in editable mode ==="
-        if ! uv pip install -e ".[all]" --override requirements/ci/overrides.txt; then
-          echo "ERROR: Failed to install finetuning-scheduler in editable mode"
+        echo "=== Pre-installed torch version ==="
+        python -c "import torch; print(f'torch: {torch.__version__}')"
+
+        echo "=== Installing finetuning-scheduler with locked dependencies ==="
+        # Use UV_OVERRIDE for Lightning commit pinning
+        # requirements.txt has torch filtered when nightly is configured (done during lock generation)
+        # Docker image torch version should match - if not, we want an error to trigger image rebuild
+        export UV_OVERRIDE="${PWD}/requirements/ci/overrides.txt"
+        if ! uv pip install -e . -r requirements/ci/requirements.txt; then
+          echo "ERROR: Failed to install finetuning-scheduler with dependencies"
           exit 1
         fi
         echo "✓ Finetuning-scheduler installation completed"
 
-        echo "=== Installing locked CI requirements ==="
-        if ! uv pip install -r requirements/ci/requirements.txt; then
-          echo "ERROR: Failed to install locked CI requirements"
-          exit 1
-        fi
-        echo "✓ CI requirements installation completed"
-
         echo "=== Installed packages ==="
         uv pip list
-      env:
-        USE_CI_COMMIT_PIN: "1"
       displayName: 'Install dependencies'
 
     - bash: |
