--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "finetuning-scheduler"
-dynamic = ["version", "description", "readme", "dependencies", "optional-dependencies"]
+dynamic = ["version", "description", "readme", "dependencies"]
 authors = [{name = "Daniel Dale", email = "danny.dale@gmail.com"}]
 license = "Apache-2.0"
 license-files = ["LICENSE*"]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 keywords = [
     "deep learning",
     "pytorch",
@@ -33,10 +33,87 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+]
+
+[project.optional-dependencies]
+# CLI tools for LightningCLI integration
+cli = [
+    "jsonargparse[signatures]>=4.27.7,<4.42.0",
+    "omegaconf>=2.1.0",
+    "hydra-core>=1.1.0",
+]
+# Extended functionality
+extra = [
+    "rich>=12.3.0",
+    # Include CLI deps
+    "jsonargparse[signatures]>=4.27.7,<4.42.0",
+    "omegaconf>=2.1.0",
+    "hydra-core>=1.1.0",
+]
+# Example scripts dependencies
+examples = [
+    "datasets>=4.0.0",  # Important removal of trust_remote_code
+    "evaluate>=0.3.0",
+    "transformers>=4.18.0",
+    "scikit-learn>=1.0.0",
+    "sentencepiece>=0.1.91",
+    "tensorboardX>=2.2",
+    "tabulate>=0.8.9",
+    "psutil>=5.8.0",
+    # Include CLI deps
+    "jsonargparse[signatures]>=4.27.7,<4.42.0",
+    "omegaconf>=2.1.0",
+    "hydra-core>=1.1.0",
+]
+# Jupyter notebook testing
+ipynb = [
+    "ipython>=7.10.0",
+    "jupytext>=1.10.0",
+    "nbval>=0.9.6",
+    # Notebook infrastructure
+    "notebook>=6.4.0",
+    "nbformat>=5.0.0",
+    "nbclient>=0.5.0",
+    "nbconvert>=6.0.0",
+    "jupyter-client>=7.0.0",
+    "jupyter-core>=4.8.0",
+    "ipykernel>=6.0.0",
+    "ipywidgets>=7.6.0",
+    "traitlets>=5.0.0",
+]
+# All optional dependencies combined
+all = [
+    # extra
+    "rich>=12.3.0",
+    # cli
+    "jsonargparse[signatures]>=4.27.7,<4.42.0",
+    "omegaconf>=2.1.0",
+    "hydra-core>=1.1.0",
+    # examples
+    "datasets>=4.0.0",
+    "evaluate>=0.3.0",
+    "transformers>=4.18.0",
+    "scikit-learn>=1.0.0",
+    "sentencepiece>=0.1.91",
+    "tensorboardX>=2.2",
+    "tabulate>=0.8.9",
+    "psutil>=5.8.0",
+    # ipynb
+    "ipython>=7.10.0",
+    "jupytext>=1.10.0",
+    "nbval>=0.9.6",
+    "notebook>=6.4.0",
+    "nbformat>=5.0.0",
+    "nbclient>=0.5.0",
+    "nbconvert>=6.0.0",
+    "jupyter-client>=7.0.0",
+    "jupyter-core>=4.8.0",
+    "ipykernel>=6.0.0",
+    "ipywidgets>=7.6.0",
+    "traitlets>=5.0.0",
 ]
 
 [project.urls]
@@ -157,25 +234,27 @@ notebook_metadata_filter = "-all"
 "scripts/" = "py"
 
 # Dependency groups for development (PEP 735)
-# Note: Main dependencies and optional-dependencies remain in setup.py for dynamic Lightning switching
+# These are NOT installed by default, only via uv pip install --group <name>
 [dependency-groups]
 dev = [
-    # install all mandatory dependencies (via base extras)
-    # install all extra dependencies for full package testing
-    # install all extra dependencies for running examples
-    # install all extra dependencies for running notebook-based example tests
-    # install all extra dependencies required for cli
-    # extended list of dependencies for development and run lint and tests (via test group)
+    # Development dependencies include test group
+    "coverage>=6.4",
+    "pytest>=6.0.0",
+    "pytest-rerunfailures>=10.2",
+    "twine>=3.2.0",
+    "mypy>=0.920",
+    "pre-commit>=2.0.0",
+    "mlflow>=2.0.0",
 ]
 test = [
     "coverage>=6.4",
-    "pytest>=6.0",
+    "pytest>=6.0.0",
     "pytest-rerunfailures>=10.2",
-    "twine==3.2",
+    "twine>=3.2.0",
     "mypy>=0.920",
-    "pre-commit>=1.0",
-    "protobuf<=3.20.1",  # strict
-    "mlflow>=1.0.0",  # optional dependencies used in base fts coverage
+    "pre-commit>=2.0.0",
+    # protobuf upper bound removed - handled by dependency resolution
+    "mlflow>=2.0.0",
 ]
 # git dependencies installed separately (git URLs cannot be in universal lock files)
 git-deps = [
@@ -189,3 +268,10 @@ git-deps = [
 override-dependencies = [
     # Lightning override handled via overrides file specified at install time for more flexibility
 ]
+
+# PyTorch index configuration is handled via --torch-backend flag
+# For CI (CPU-only): use --torch-backend=cpu
+# For local dev (CUDA): use --torch-backend=auto or UV_TORCH_BACKEND=cu128
+# See: https://docs.astral.sh/uv/guides/integration/pytorch/
+# Note: We don't define explicit indices or sources here because --torch-backend
+# configures everything automatically and allows flexibility between CPU/CUDA builds
