--- a/requirements/ci/requirements-oldest.txt
+++ b/requirements/ci/requirements-oldest.txt
@@ -240,10 +240,8 @@ keyring==25.7.0
     # via twine
 kiwisolver==1.4.9
     # via matplotlib
-lightning @ git+https://github.com/Lightning-AI/lightning.git@79ffe5025e0ceababbe874d6269e2006145226c1
-    # via
-    #   --override requirements/ci/overrides.txt
-    #   finetuning-scheduler (pyproject.toml)
+lightning==2.6.0
+    # via finetuning-scheduler (pyproject.toml)
 lightning-utilities==0.15.2
     # via
     #   lightning
@@ -292,12 +290,6 @@ multiprocess==0.70.16
     # via
     #   datasets
     #   evaluate
-mypy==0.920
-    # via
-    #   finetuning-scheduler (pyproject.toml:dev)
-    #   finetuning-scheduler (pyproject.toml:test)
-mypy-extensions==0.4.4
-    # via mypy
 nbclient==0.5.0
     # via
     #   finetuning-scheduler (pyproject.toml)
@@ -328,7 +320,9 @@ networkx==3.6 ; python_full_version >= '3.11'
 nh3==0.3.2
     # via readme-renderer
 nodeenv==1.9.1
-    # via pre-commit
+    # via
+    #   pre-commit
+    #   pyright
 notebook==6.4.0
     # via
     #   finetuning-scheduler (pyproject.toml)
@@ -463,6 +457,10 @@ pyjwt==2.10.1
     # via databricks-cli
 pyparsing==3.2.5
     # via matplotlib
+pyright==1.1.390
+    # via
+    #   finetuning-scheduler (pyproject.toml:dev)
+    #   finetuning-scheduler (pyproject.toml:test)
 pyrsistent==0.20.0
     # via jsonschema
 pytest==6.0.0
@@ -601,10 +599,8 @@ toml==0.10.2
     #   jupytext
     #   pre-commit
     #   pytest
-tomli==2.3.0
-    # via
-    #   alembic
-    #   mypy
+tomli==2.3.0 ; python_full_version < '3.11'
+    # via alembic
 torch==2.6.0
     # via
     #   finetuning-scheduler (pyproject.toml)
@@ -663,7 +659,7 @@ typing-extensions==4.15.0
     #   lightning
     #   lightning-utilities
     #   multidict
-    #   mypy
+    #   pyright
     #   pytorch-lightning
     #   sqlalchemy
     #   torch
