--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -125,3 +125,8 @@ jobs:
         name: CPU-coverage
         fail_ci_if_error: false
         verbose: true # optional (default = false)
+
+    - name: Minimize uv cache
+      if: always()
+      shell: bash
+      run: uv cache prune --ci
