--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ examples = [
     "evaluate>=0.3.0",
     "transformers>=4.18.0",
     "scikit-learn>=1.0.0",
-    "sentencepiece>=0.1.91",
+    "sentencepiece>=0.2.0",  # 0.2.0+ has pre-built wheels
     "tensorboardX>=2.2",
     "tabulate>=0.8.9",
     "psutil>=5.8.0",
@@ -97,7 +97,7 @@ all = [
     "evaluate>=0.3.0",
     "transformers>=4.18.0",
     "scikit-learn>=1.0.0",
-    "sentencepiece>=0.1.91",
+    "sentencepiece>=0.2.0",
     "tensorboardX>=2.2",
     "tabulate>=0.8.9",
     "psutil>=5.8.0",
