--- a/requirements/ci/requirements-oldest.txt
+++ b/requirements/ci/requirements-oldest.txt
@@ -8,7 +8,7 @@ aiosignal==1.4.0
     # via aiohttp
 alembic==1.17.2
     # via mlflow
-antlr4-python3-runtime==4.8
+antlr4-python3-runtime==4.9.3
     # via
     #   hydra-core
     #   omegaconf
@@ -153,7 +153,7 @@ huggingface-hub==0.36.0
     #   datasets
     #   evaluate
     #   transformers
-hydra-core==1.1.0
+hydra-core==1.2.0
     # via finetuning-scheduler (pyproject.toml)
 identify==2.6.15
     # via pre-commit
@@ -378,7 +378,7 @@ nvidia-nvtx-cu12==12.4.127 ; platform_machine == 'x86_64' and sys_platform == 'l
     # via torch
 oauthlib==3.3.1
     # via databricks-cli
-omegaconf==2.1.0
+omegaconf==2.2.3
     # via
     #   finetuning-scheduler (pyproject.toml)
     #   hydra-core
@@ -388,6 +388,7 @@ packaging==23.2
     #   evaluate
     #   gunicorn
     #   huggingface-hub
+    #   hydra-core
     #   lightning
     #   lightning-utilities
     #   matplotlib
@@ -433,7 +434,7 @@ protobuf==4.25.8
     # via
     #   mlflow
     #   tensorboardx
-psutil==5.8.0
+psutil==5.9.0
     # via finetuning-scheduler (pyproject.toml)
 ptyprocess==0.7.0 ; os_name != 'nt' or sys_platform != 'win32'
     # via
@@ -539,7 +540,7 @@ rich==12.3.0
     # via finetuning-scheduler (pyproject.toml)
 sacremoses==0.1.1
     # via transformers
-scikit-learn==1.0
+scikit-learn==1.2.0
     # via
     #   finetuning-scheduler (pyproject.toml)
     #   mlflow
