--- a/requirements/ci/requirements-oldest.txt
+++ b/requirements/ci/requirements-oldest.txt
@@ -563,6 +563,7 @@ six==1.17.0
     #   nbval
     #   python-dateutil
     #   querystring-parser
+    #   tensorboardx
 smmap==5.0.2
     # via gitdb
 sqlalchemy==2.0.44
@@ -577,7 +578,7 @@ tabulate==0.8.9
     # via
     #   finetuning-scheduler (pyproject.toml)
     #   databricks-cli
-tensorboardx==2.2
+tensorboardx==2.5
     # via finetuning-scheduler (pyproject.toml)
 terminado==0.18.1
     # via notebook
