--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ examples = [
     "transformers>=4.26.0",
     "scikit-learn>=1.2.0",
     "sentencepiece>=0.2.0",
-    "tensorboardX>=2.5",
+    "tensorboardX>=2.6.1",  # 2.6.1+ regenerated protos for protobuf 4.x
     "tabulate>=0.8.9",
     "psutil>=5.9.0",
     # Include CLI deps
@@ -98,7 +98,7 @@ all = [
     "transformers>=4.26.0",
     "scikit-learn>=1.2.0",
     "sentencepiece>=0.2.0",
-    "tensorboardX>=2.5",
+    "tensorboardX>=2.6.1",  # 2.6.1+ regenerated protos for protobuf 4.x
     "tabulate>=0.8.9",
     "psutil>=5.9.0",
     # ipynb
