update docs to reflect pip to uv migration updates

--- a/.github/workflows/ci_schema.yml
+++ b/.github/workflows/ci_schema.yml
@@ -11,9 +11,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          cache-dependency-glob: "requirements/**/*.txt"
+          version: "latest"
+
       - name: Install pkg
         run: |
-          pip install check-jsonschema
+          uv pip install --system check-jsonschema
 
       - name: GH Workflows
         run: check-jsonschema .github/workflows/*.yml --builtin-schema "github-workflows"
