--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -52,8 +52,8 @@ build:
 # Optionally set the version of Python and requirements required to build your docs
 python:
   install:
-    - requirements: requirements/base.txt
-    - requirements: requirements/examples.txt
     - requirements: requirements/docs.txt
     - method: pip
       path: .
+      extra_requirements:
+        - examples
